# linux-intro

./: .gitignore  Cargo.toml  README.md  cargo.toml  dockerfile  flake.nix  next.config.js  onboarding.md  package-lock.json  package.json  pnpm-lock.yaml  setup.sh  tailwind.config.ts  test.sh  test.txt  vercel.json
.devcontainer/: devcontainer.json  dockerfile  postCreateCommand.sh
api/: cargo.toml  days_left.rs  handler.rs  subject_info.rs
api/left-days/: Cargo.toml  LICENSE_MIT
api/left-days/src/: lib.rs
manual/: onboarding.md
src/app/: globals.css  handler.rs  layout.tsx  page.tsx
src/app/api/edge/: config-object.ts  route.ts
src/components/: exam-range.tsx  exam_temprate.tsx  header.tsx  info_template.tsx  infomations.tsx  subject_date.json  subjects.tsx  tableData.tsx  timetable.css  timetable.tsx  todo.tsx  winter_hw.tsx
src/data/: exam-range.json  imfomations.json
src/pages/: _app.tsx  exam.tsx  kosensai-ranking.tsx  kosensai.tar.xz  kosensai.tsx
src/pages/help/: how-to-raise-issue.mdx
src/styles/: article.css  timetable.css
timetable-app-tauri/: package.json
timetable-app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
