[package]
name = "timetable-frontend-next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.89"
serde = "1.0.193"
postgres = "0.19.7"

[[bin]]
name = "subject_info"
path = "api/subject_info.rs"