[package]
name = "timetable-frontend-next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.1.0" }
chrono = { version = "0.4", features = ["serde"] }

# wasm-bindgen = "0.2.89"
# serde = "1.0.193"
# postgres = "0.19.7"
[[bin]]
name = "handler"
path = "api/handler.rs"

[[bin]]
name = "days_left"
path = "api/days_left.rs"
